--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -9,15 +9,15 @@
 }
 
 
-@media (min-width: 500px) and (max-height: 400px) {
+@media (max-width: 500px) and (max-height: 400px) {
     .Burger {
-        width: 350px;
-        height: 300px;
+        max-width: 300px;
+        max-height: 250px;
     }
 }
 @media (min-width: 500px) and (min-height: 401px) {
     .Burger {
-        width: 450px;
+        max-width: 450px;
         height: 400px;
     }
 }
